Eliminate compilation warnings